# opencvmini

./: .gitignore  Cargo.toml  README.md  build.rs  wasmedge_opencvmini.wit
.github/workflows/: rust.yml
example/object-detection/: .gitignore  Cargo.toml  README.md
example/object-detection/src/: main.rs
example/plugin-function-examples/: Cargo.toml
example/plugin-function-examples/src/: cvt_color.rs  normalize.rs  resize.rs
example/plugin-function-tests/: Cargo.toml
example/plugin-function-tests/src/: cvt_color.rs  normalize.rs
scripts/: regenerate-bindings-from-wit.sh
src/: color_conversion.rs  generated.rs  interpolation.rs  lib.rs  normalization.rs
