[package]
name = "opencvmini"
version = "0.1.0"
edition = "2021"
description = "Rust SDK of wasmedge plugin opencvmini"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
os_info = { version = "3", default-features = false }
powershell_script = "1.1"

[dependencies]
